# modern-data-cookiecutter

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .venv  CHANGELOG.md  CONTRIBUTING.md  README.md  cookiecutter.json  pyproject.toml  requirements.txt  setup.cfg
.changelog/: 10.added  108.maintenance  12.added  14.added  220.changed  8.added
.github/workflows/: codeql-analysis.yml  constraints.txt  main.yaml  test.yaml
docs/: getting_started.md
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_coefficient_cookiecutter.py
{{cookiecutter.repo_name}}/: .env.template  .gitignore  .pre-commit-config.template.yaml  .venv  CHANGELOG.md  README.md  pyproject-template.toml  pyproject.template.toml  pyproject.toml  setup.cfg
{{cookiecutter.repo_name}}/.github/workflows/: codeql-analysis.yml  main.yaml
{{cookiecutter.repo_name}}/docs/: getting_started.md  project_specific_setup.md  quickstart.md  release_process.md  updating_requirements.md  using_poetry.md
{{cookiecutter.repo_name}}/hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.package_name}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: __init__.py
