# 🚨 THIS IS THE COEFFICIENT-COOKIECUTTER pyproject.toml — please double check you want to edit
# this file and not {{cookiecutter.package_name}}/pyproject.toml
###########
# 📜 Poetry
###########
[tool.poetry]
name = "coefficient-cookiecutter"
version = "0.2.2"
description = ""
authors = ["John Sandall <contact@coefficient.ai>"]
license = "UNLICENSED"
classifiers = ["Private :: Do Not Upload"]

[tool.poetry.dependencies]
python = "^3.12"
# Everything below here is alphabetically sorted
cookiecutter = "^2.1.1"
mypy = "^1.3.0"
requests = "<2.30.0"

[tool.poetry.dev-dependencies]
# Everything below here is alphabetically sorted
detect-secrets = "1.2.0"
ipdb = "^0.13.13"
pip-audit = "^2.5.5"
pre-commit = "^3.3.2"
pylint = "^2.17.4"
pytest = "^7.3.1"
towncrier = "^22.12.0"
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

############
# ✅ Linters
############
[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
  "A",
  "AIR",
  "ARG",
  "B",
  "C4",
  "C90",
  "COM",
  # "CPY",
  "D",
  "DJ",
  "DTZ",
  "E",
  # "E4", "E7", "E9",
  "ERA",
  "EXE",
  "F",
  "FA",
  "FIX",
  "FLY",
  # "FURB",
  "G",
  "I",
  "ICN",
  "INP",
  "INT",
  "ISC",
  # "LOG",
  "N",
  "NPY",
  "PD",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "T20",
  "TCH",
  "TD",
  "TID",
  "TRY",
  "UP",
  "W",
]
ignore = [
  "ARG001",
  "ARG002",
  "COM812",
  "D101",
  "D202",
  "D205",
  "D211",
  "D213",
  "D400",
  "D400",
  "D401",
  "D404",
  "D415",
  "DTZ005",
  "E203",
  "FIX002",
  "G004",
  "INP001",
  "ISC001",
  "PD901",
  "PLR2004",
  "PLR0133",
  "PT004",
  "PTH107",
  "PTH123",
  "R504",
  "R506",
  "R508",
  "RUF013",
  "T100",
  "TD002",
  "TD003",
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
##############
# 📣 Towncrier
##############
[tool.towncrier]
filename = "CHANGELOG.md"
directory = ".changelog/"
template = ".changelog/template.md"
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/CoefficientSystems/coefficient-cookiecutter/issues/{issue})"
start_string = "<!-- TOWNCRIER -->\n"
underlines = ["", ""]

# .added for new features
# .changed for changes in existing functionality
# .deprecated for soon-to-be removed features
# .removed for now removed features
# .fixed for any bug fixes
# .security in case of vulnerabilities
# .analysis for data analyses
# .docs for documentation improvements
# .maintenance for maintenance tasks & upgrades
[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "analysis"
name = "Analyses"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance Changes"
showcontent = true
